--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-https://believemy.com/r/creer-une-fenetre-modale-sans-utiliser-javascript
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -44,6 +42,15 @@ https://believemy.com/r/creer-une-fenetre-modale-sans-utiliser-javascript
                         <a href="#section1_best_movies" class="arrow__btn">›</a>
                         </section>
                 </section>
+            </div>
+            <div id="bestMovies0" class="modal">
+                <div class="modal_content">
+                  <h1>Hello</h1>
+              
+                  <p>Bienvenue sur la fenêtre modale !</p>
+              
+                  <a href="#" class="modal_close">&times;</a>
+                </div>
             </div>
 
         <h2>Meilleurs films des années 80</h2>
