validated HTML CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
@@ -9,7 +9,7 @@
 
     <body>
         <header>
-            <img class="logo" src="./images/logo_white.png">
+            <img class="logo" src="./images/logo_white.png" alt="logo_white">
         </header>
             <div id="bestMovie">
                 <div class="poster BestMovie"></div>
@@ -32,32 +32,24 @@
                 <section id="section1_best_movies">
                     <a href="#section2_best_movies" class="arrow__btn">‹</a>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <a href="#section2_best_movies" class="arrow__btn">›</a>
-                        </section>
-                        <section id="section2_best_movies">
+                </section>
+                <section id="section2_best_movies">
                         <a href="#section1_best_movies" class="arrow__btn">‹</a>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <div class="item bestMovies">
-                            <img src="">
                         </div>
                         <a href="#section1_best_movies" class="arrow__btn">›</a>
-                        </section>
                 </section>
             </div>
             
@@ -67,32 +59,24 @@
                 <section id="section1_best80s">
                     <a href="#section2_best80s" class="arrow__btn">‹</a>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <a href="#section2_best80s" class="arrow__btn">›</a>
-                        </section>
-                        <section id="section2_best80s">
+                </section>
+                <section id="section2_best80s">
                         <a href="#section1_best80s" class="arrow__btn">‹</a>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <div class="item best80s">
-                            <img src="">
                         </div>
                         <a href="#section1_best80s" class="arrow__btn">›</a>
-                        </section>
                 </section>
             </div>
         <h2>Best Comedies</h2>
@@ -100,32 +84,24 @@
                 <section id="section1_comedy">
                     <a href="#section2_comedy" class="arrow__btn">‹</a>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <a href="#section2_comedy" class="arrow__btn">›</a>
-                        </section>
-                        <section id="section2_comedy">
+                </section>
+                <section id="section2_comedy">
                         <a href="#section1_comedy" class="arrow__btn">‹</a>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <div class="item comedy">
-                            <img src="">
                         </div>
                         <a href="#section1_comedy" class="arrow__btn">›</a>
-                        </section>
                 </section>
             </div>
         <h2>Best Thriller Movies</h2>
@@ -133,264 +109,140 @@
                 <section id="section1_thriller">
                     <a href="#section2_thriller" class="arrow__btn">‹</a>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <a href="#section2_thriller" class="arrow__btn">›</a>
-                        </section>
-                        <section id="section2_thriller">
+                </section>
+                <section id="section2_thriller">
                         <a href="#section1_thriller" class="arrow__btn">‹</a>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <div class="item thriller">
-                            <img src="">
                         </div>
                         <a href="#section1_thriller" class="arrow__btn">›</a>
-                        </section>
                 </section>
             </div>
             <div id="bestMovieModal" class="modal">
                 <div class="modal_content">
-                  <h1></h1>
-                    <img src="">
-                        <p></p>
-                           <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies0" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies1" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies2" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies3" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies4" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies5" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="bestMovies6" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s0" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s1" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s2" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s3" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s4" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s5" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="best80s6" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy0" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy1" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy2" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy3" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy4" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy5" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="comedy6" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller0" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller1" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller2" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller3" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller4" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller5" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
             <div id="thriller6" class="modal">
                 <div class="modal_content">
-                    <h1></h1>
-                        <img src="">
-                            <p></p>
-                                <a href="#" class="modal_close">&times;</a>
                 </div>
             </div>
     </body>
