--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <header>
             <img class="logo" src="./images/logo_white.png" alt="logo_white">
         </header>
-            <div id="bestMovie">
-                <div class="poster BestMovie"></div>
+            <div id="bestMovie" class="heroSectionAll">
+                <div class="poster heroSection"></div>
                 <div class="play">Play Movie</div>
-                <div class="info BestMovie">
+                <div class="info heroSection">
                 </div>
             </div>
         <h2>Best Movies</h2>
             <div class="wrapper">
                 <section id="section1_best_movies">
                     <a href="#section2_best_movies" class="arrow__btn">‹</a>
-                        <div class="item bestMovies">
+                        <div id = "bestMovies1" class="item bestMovies">
                         </div>
                         <div class="item bestMovies">
                         </div>
@@ -32,7 +32,7 @@
                         <a href="#section2_best_movies" class="arrow__btn">›</a>
                 </section>
                 <section id="section2_best_movies">
-                        <a href="#section1_best_movies" class="arrow__btn">‹</a>
+                        <a href="#section1_best_movies" class="arrow__btn">‹</a>     
                         <div class="item bestMovies">
                         </div>
                         <div class="item bestMovies">
@@ -119,121 +119,10 @@
                         <a href="#section1_thriller" class="arrow__btn">›</a>
                 </section>
             </div>
-            <div id="bestMovieModal" class="modal">
+            <div id="modal" class="modal">
                 <div class="modal_content">
                 </div>
             </div>
-            <div id="bestMovies0" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="bestMovies1" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="bestMovies2" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="bestMovies3" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="bestMovies4" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="bestMovies5" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="bestMovies6" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s0" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s1" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s2" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s3" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s4" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s5" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="best80s6" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy0" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy1" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy2" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy3" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy4" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy5" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="comedy6" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller0" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller1" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller2" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller3" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller4" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller5" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
-            <div id="thriller6" class="modal">
-                <div class="modal_content">
-                </div>
-            </div>
+    </body>
     </body>
 </html>
